--- a/Episode 05 - Let's get Hooked/index.html
+++ b/Episode 05 - Let's get Hooked/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Episode 04 - Talk is cheap, show me the code! 01</title>
+    <title>Food & Food</title>
 
     <link rel="stylesheet" href="src/index.css">
 </head>
